--- a/ALLM/index.html
+++ b/ALLM/index.html
@@ -110,12 +110,32 @@
 </section>
 
 
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- Survey. -->
+    <div class="columns is-centered">
+      <div class="column">
+        <div class="content">
+                   <!-- <center><img src="static/images/July04_USAMV_DJI_0231_f_01500_annotations.png" alt="Alternative Text" width="80%" class="center"></center> -->
+          <div class="content has-text-justified">
+            <p>
+             Leukaemia is a deadly disease, and the patient’s recovery rate is very dependent on early diagnosis. However, its diagnosis under the microscope is tedious and time-consuming. The advancement of deep convolutional neural networks (CNNs) in image classification has enabled new techniques in automated disease detection systems. These systems serve as valuable support and secondary opinion resources for laboratory technicians and haematologists when diagnosing leukemia through microscopic examination. In this study, we deployed a pre-trained CNN model (MobileNet) that has a small size and low complexity, making it suitable for mobile applications and embedded systems.  We used the L1 regularisation method and a novel dataset balancing approach, which incorporates HSV colour transformation, saturation elimination, Gaussian noise addition, and several established augmentation techniques, to prevent model overfitting. The proposed model attained an accuracy of 95.33% and an F1 score of 0.95 when evaluated on the C_NMC_2019 public dataset. We also evaluated the proposed model by adding zero-mean Gaussian noise to the test images. The experimental results indicate that the proposed model is both efficient and robust, even when subjected to additional Gaussian noise. The comparison of the proposed MobileNet_M model's results with those of ALNet and various other existing models on the same dataset underscores its superior efficacy. The code is available for reproducing the experimental results at tamaslevente.github.io.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--/ Survey. -->
+  </div>
+</section>
 
 
 
-    <pre><code>@article{molnar2025closeproximityaerial,
-      author    = TBD},
-      title     = {{TBD}},
+
+
+    <pre><code>@article{Makema2025ALLM,
+      author    = {Mimosette Makema and Levente Tamas and Lucian Busoniu},
+      title     = {{ Acute Lymphoblastic Leukaemia in Microscopic Imaging}},
       journal   = {Frontiers},
       volume    = {},
       number    = {},
