--- a/ALLM/index.html
+++ b/ALLM/index.html
@@ -74,7 +74,7 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href="https://github.com/tamaslevente/"
+                <a href="https://github.com/tamaslevente/ALLM"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
